--- a/baculainstall/roles/mysqlinstall/tasks/main.yml
+++ b/baculainstall/roles/mysqlinstall/tasks/main.yml
@@ -4,13 +4,13 @@
     name: mysql-server
     state: present
 
-# - name: Copy MySQL Configuration
-#   files:
-#     src: my.cnf.j2
-#     dest: /etc/mysql/my.cnf
-#     owner: root
-#     group: root
-#     mode: '0644'
+- name: Copy MySQL Configuration
+  copy:
+    src: mysqld.cnf
+    dest: /etc/mysql/mysql.conf.d/mysqld.cnf
+    owner: root
+    group: root
+    mode: '0644'
 
 - name: Restart MySQL Service
   service:
